# tsukimi

./: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  tsukimi.exe.manifest  tsukimi_manifest.rc
.cargo/: config.toml
.github/workflows/: CI_testing.yml  build.yml  build_cross.yml  build_linux.yml  build_macos.yml  build_msvc.yml  build_release.yml  build_windows.yml  cargo_clippy_check.yaml  weekly.yml
docker/: add-arm64.sh  add-deps.sh  cross-compile.sh  entrypoint.sh
installer/Debian/: postinst  postrm
resources/: style-dark.css  style.css
resources/ui/: window.ui
share/macos/: bundle.sh
src/: app.rs  arg.rs  main.rs  utils.rs
src/client/: client.rs  emby_client.rs
src/config/: proxy.rs
src/ui/: mod.rs  style.css
src/ui/mpv/: control_sidebar.rs  mpvglarea.rs  page.rs  tsukimi_mpv.rs
src/ui/widgets/: item.rs  window.rs
