[package]
name = "tsukimi_migtool"
authors = ["kosette"]
description = "A simple CLI tool help migrating from old Tsukimi versions"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
winreg = "0.52"
