[package]
name = "tsukimi_migtool"
authors = ["kosette"]
description = "A simple tool to backup and convert Tsukimi configs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
winreg = "0.53"
